--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "openai": "^5.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
